@@ -9,6 +9,8 @@ AUX freshclam.conf 64 RMD160 39f5a64cadb0f766605b62a2019303b0ef6b0a36 SHA1 8d112
 AUX freshclam.rc 1070 RMD160 cdd42aa9b9999e3c53e3f28443fb0bdf024c426f SHA1 9fc65761d9d9dbb8565d9abb5e634d73304ceede SHA256 436ddaf181cfb3bc84ad6f7a1858fbb5353ad079405016094b4fc0008b7ce28c
 AUX lib-ld.m4 3417 RMD160 7b412510e7ef9966f70ed29937e3556283128a9b SHA1 8b72b8f5f76e41e4ca0f2521c06c568490894a84 SHA256 18c4c458009da32c9daf0ea332a539e5edc82ba009b6c2faac004626313f00e5
 DIST clamav-0.95.2.tar.gz 25137010 RMD160 83cab51c224251316288e4c3189ba91f640e9f82 SHA1 7544b39d84f2233b984a9c2ce3ef74d407add483 SHA256 f5f2a5a9984fd1ade69a7c2cc78da2f5dc0c505f94ab58fb2aa6613399ab1c56
+DIST clamav-0.95.3.tar.gz 26919541 RMD160 c68a2948aa9ab7a3b5f8e9744322d3606ae6df71 SHA1 ab4b1f49d0f24154767d303d6a27b74acf6f4b59 SHA256 003e7a570932fdffbd19fa7a7996274fbfc93f890d26c3066a36eb824c906250
 EBUILD clamav-0.95.2.ebuild 4363 RMD160 e4d089f72a56fd09022bbd794b380def005bab0a SHA1 8a75afedb78cd01fcf3c4598d1ff18e85abd61e7 SHA256 3604c4464785ae13c33e71e41873ba24218de724c89c92c0c0991b669934a345
-MISC ChangeLog 48642 RMD160 99b8db68505b988dbc293ecc387097cd7c2cbb35 SHA1 d136107934968e3a37119ab5bc2b19be4a8395ca SHA256 eb09dc8763074169b3dd6c6221938deb168a5d3fe2e962e910186583a39a0b71
+EBUILD clamav-0.95.3.ebuild 4500 RMD160 93080f10dfa5c1151a796174291060aaa5654998 SHA1 bbc6054bdd687ff3c97b6a953d279572f6ea8d68 SHA256 96b7069ea3e24cc97101d85ab13edb3310d10d19e31ede60b9e405e103321b23
+MISC ChangeLog 49046 RMD160 92f4c1775a2c36b0d707b02b4b3cc6798f000e2a SHA1 04221739a3cba3a486da6907a5d098e62ce5eebe SHA256 ab4fc00a4b8ea0218e17e9d09461dc44c0d4a1d394c3eda26be2f50e2ad859b4
 MISC metadata.xml 320 RMD160 3546393e30d87f0b0a2fb17e2f15f57dd8c19661 SHA1 b959e38933418e6fc818ed40cd9a4921b8c66102 SHA256 e2a8c4c8bedbffe50a126c1c7395a4d92652c2d95347b9496d54aea1f230a22d
